<resources>
    <string name="fa_navicon">&#xf0c9;</string>
    <string name="swich_on_setteing">On &#xf205; </string>
    <string name="swichOn">&#xf205;</string>
    <string name="swich_off_setteing">Off &#xf204; </string>
    <string name="swichOff">&#xf204;</string>
    <string name="fa_list_ul">&#xf0ca;</string>
    <string name="fa_user">&#xf007;</string>
    <string name="fa_random">&#xf074;</string>
    <string name="fa_backward">&#xf04a;</string>
    <string name="fa_play_circle">&#xf144;</string>
    <string name="fa_pause_circle">&#xf28b;</string>
    <string name="fa_stop">&#xf04d;</string>
    <string name="fa_stop_circle">&#xf28e;</string>
    <string name="fa_group">&#xf0c0;</string>
    <string name="fa_rss">&#xf0a1;</string>
    <string name="arrow_down">&#xf078;</string>
    <string name="fa_map_marker">&#xf041;</string>
    <string name="fa_picture">&#xf03e;</string>
    <string name="fa_commenting_oww">&#xf27b;</string>
    <string name="fa_commentingw">&#xf27a;</string>
    <string name="fa_rsstmp">&#xf09e;</string>
    <string name="fa_comment_o_chat">&#xf0e5;</string>
    <string name="fa_comments_o_group">&#xf0e6;</string>
    <string name="fa_map_signs_all">&#xf277;</string>
    <string name="fa_camera">&#xf083;</string>
    <string name="fa_eraser">&#xf12d;</string>
    <string name="fa_chevron_left">&#xf053;</string>
    <string name="fa_external_link">&#xf054;</string>
    <string name="fa_repeat">&#xf01e;</string>
    <string name="fa_check_square">&#xf14a;</string>
    <string name="fa_check_square_o">&#xf046;</string>
    <string name="fa_pause">&#xf04c;</string>
    <string name="fa_angle_left">&#xf104;</string>
    <string name="fa_ellipsis_v">&#xf142;</string>
    <string name="fa_share">&#xf1e0;</string>
    <string name="fa_delete">&#xf057;</string>
    <string name="fa_plus">&#xf055;</string>
    <string name="fa_plusa">&#xf067;</string>
    <string name="fa_share1">&#xf064;</string>
    <string name="fa_arrow_right">&#xf061;</string>
    <string name="arrow_up">&#xf077;</string>
    <string name="fa_bell">&#xf1f7;</string>
    <string name="fa_bell_o">&#xf0a2;</string>
    <string name="fa_magic">&#xf0d0;</string>
    <string name="fa_trash">&#xf014;</string>
    <string name="fa_reply">&#xf112;</string>
    <string name="fa_forward">&#xf04e;</string>
    <string name="fa_files">&#xf0c5;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="fa_paperclip">&#xf0c6;</string>
    <string name="fa_chat_with">&#xf1cd;</string>
    <string name="fa_smile_o">&#xf118;</string>
    <string name="fa_play">&#xf04b;</string>
    <string name="fa_microphone">&#xf130;</string>
    <string name="warning">&#xf071;</string>
    <string name="video">&#xf03d;</string>
    <string name="music">&#xf001;</string>
    <string name="phone">&#xf098;</string>
    <string name="folder">&#xf07c;</string>
    <string name="fa_search">&#xf002;</string>
    <string name="paint">&#xf1fc;</string>
    <string name="save">&#xf0c7;</string>
    <string name="eyedropper">&#xf1fb;</string>
    <string name="fa_comments">&#xf086;</string>
    <string name="fa_shield">&#xf132;</string>
    <string name="fa_slideshare">&#xf1e7;</string>
    <string name="fa_gear">&#xf013;</string>
    <string name="fa_question_circle">&#xf059;</string>
    <string name="fa_lock">&#xf023;</string>
    <string name="fa_circle_o">&#xf10c;</string>
    <string name="fa_remove">&#xf00d;</string>
    <string name="fa_circle">&#xf111;</string>
    <string name="fa_puzzle">&#xf12e;</string>
    <string name="fa_sign_out">&#xf08b;</string>
    <string name="fa_phone">&#xf095;</string>
    <string name="fa_eye">&#xf06e;</string>
    <string name="avatar_not_set_yet_en"> Avatar Not Set Yet ! </string>
    <string name="approve_en">Approve</string>
    <string name="attention_en"> Attention:</string>
    <string name="all_en">All</string>
    <string name="are_you_sure_toexit_en">Are you sure you want to exit?</string>
    <string name="are_you_sure_en">Are you sure?</string>
    <string name="ask_your_qustion_en">Ask your question</string>
    <string name="add_member_en">Add Member</string>
    <string name="automatic_media_download_en">Automatic Media Download</string>
    <string name="action_settings">Settings</string>
    <string name="access_code_en">Access Code</string>
    <string name="account_delete_not_en">If you don\'t log in at least once in a certain  period , your account will be deleted . Your messages , groups and channels will be removed permanently</string>
    <string name="account_self_destructs_en">Account Self-Destruct</string>
    <string name="active_sessions_en">Active Sessions</string>
    <string name="add_en">Add</string>
    <string name="add_contacts_en">Add Contact</string>
    <string name="blocking_contact_en">Block</string>
    <string name="connecting_en">Connecting . . .</string>
    <string name="blocked_user_en">Blocked Users</string>
    <string name="between_en">Your name should contain 4 to 40 characters including (A to Z ) and ( 0 to 9 ) </string>
    <string name="biger_three_chrecter_en">Your name must be longer than three characters </string>
    <string name="block_contact_en">Block Contact</string>
    <string name="blockList_en">Block List</string>
    <string name="choose_your_profile_picture_en">Choose a profile picture</string>
    <string name="choose_from_gallery_en">Choose from Gallery</string>
    <string name="continue_en">Continue</string>
    <string name="cansel_en">Cancel</string>
    <string name="cannot_load_data_en">Can\'t Load Data</string>
    <string name="contact_added_en">Contact Added !</string>
    <string name="code_isnot_true_en">Code is not valid</string>
    <string name="cannot_test_code_en">You can\'t enter codes more than three times </string>
    <string name="chatroom_is_full_en">Chat room is full</string>
    <string name="create_new_chat_en">Create a new chat</string>
    <string name="create_new_group_en">Create a new group</string>
    <string name="create_new_chanel_en">Create a new channel</string>
    <string name="channel_avatar_not_set_yet_en">No Channel Picture Yet !</string>
    <string name="contact_list_en">Contact List</string>
    <string name="country_en">Country</string>
    <string name="call_en">Call</string>
    <string name="channel_error1_en">Channel E 1 :  </string>
    <string name="channel_error2_en">Channel E 2 :  </string>
    <string name="channel_error3_en">Channel E 3 : </string>
    <string name="channel_name_en">Channel Name</string>
    <string name="chat_with_support_en">Chat with Support</string>
    <string name="channel_link_en">Channel Link</string>
    <string name="chats_en">Chats</string>
    <string name="connected_en">Connected</string>
    <string name="connection_failed_en">Connection Failed ! </string>
    <string name="creating_group_please_wait_en">Creating a Group .  Please wait ...</string>
    <string name="close_en">Close</string>
    <string name="clear_history_en">Clear History</string>
    <string name="clear_chsh_en">Clear Cache</string>
    <string name="Channel_info_en">Channel Info</string>
    <string name="channels_en">Channels</string>
    <string name="channel_define__en">Channels are to broadcast your message to unlimitted audience</string>
    <string name="channel_nick_en">Channel Nickname</string>
    <string name="create_en">Create</string>
    <string name="channel_description_en">Channel Description</string>
    <string name="channel_isnot_foryou_en">You are not permitted to access the channel . Channel is blocked or it doesn\'t exist .</string>
    <string name="channel_isnot_foryou_edit_en">You are not permitted to access the channel . Channel is blocked or it doesn\'t exist. There is no information to edit.</string>
    <string name="choose_picture_en">Choose a Picture</string>
    <string name="chatroom_has_member_en">Chat Room has members </string>
    <string name="channel_successfully_deleted_en">Channel Successfully Deleted !</string>
    <string name="channel_successfully_edited_en">Channel Successfully Edited </string>
    <string name="contacts_en">Contacts</string>
    <string name="control_your_session_on_other_devices._en">Check the other sessions</string>
    <string name="Compelete_Sound_en">Complete Sound!</string>
    <string name="delet_channel">Delete Channel</string>
    <string name="delet_group">Delete Group</string>
    <string name="delete_chat_en">Delete Chat</string>
    <string name="deleted_en">Deleted</string>
    <string name="date_en">Date</string>
    <string name="description_for_delete_account_en">  Description to Delete an Account </string>
    <string name="description_en">Description</string>
    <string name="dashboard_en">Menue</string>
    <string name="delete_avatar_en">Delete Avatar</string>
    <string name="device_dosenot_camera_en">This device does not have a camera</string>
    <string name="doyou_wantto_turnon_gps_en">Do you want to turn gps on ?</string>
    <string name="do_you_agree_en">Do you agree with terms and conditions?</string>
    <string name="everybody_en">Everybody</string>
    <string name="enter_code_en">Enter code</string>
    <string name="edit_en">Edit</string>
    <string name="account_delete">Delete Account</string>
    <string name="account_delete_user">Delete My Account</string>
    <string name="Error_occurred_en">Error Occurred</string>
    <string name="Error_invalid_parameters_en">Invalid Parameters</string>
    <string name="email_address_en">Email Address</string>
    <string name="edit_group_en">Edit Group</string>
    <string name="faq_en">FAQ</string>
    <string name="female_en">Female</string>
    <string name="forwarded_en">Forwarded</string>
    <string name="forwarded_messages_en">forwarded Messages</string>
    <string name="first_name_required_en">First Name (Required)</string>
    <string name="file_en">File</string>
    <string name="file_name_en">File Name</string>
    <string name="fill_profile_en">Edit your profile</string>
    <string name="get_your_code_en">Get your code</string>
    <string name="group_en">Group</string>
    <string name="group_link_en">Group Link</string>
    <string name="group_define_en">Groups are ideal for smaller communities .They support up to 100 members</string>
    <string name="group_name_en">Group Name</string>
    <string name="group_info_en">Group Info</string>
    <string name="group_members_en">Group Members</string>
    <string name="group_avatar_not_set_yet_en">Group Pic Not Set Yet!</string>
    <string name="gener_en">Gender</string>
    <string name="groups_en">Groups</string>
    <string name="group_description_en">Group Description</string>
    <string name="group_isnot_foryou_edit_en">You are not permitted to access the group . Group is blocked or it doesn\'t exist</string>
    <string name="group_successfully_edited_en">Group Successfully Edited </string>
    <string name="ifyou_away_for_en">If you are away for</string>
    <string name="i_agree_en">I agree</string>
    <string name="igap_support_en">iGap Support</string>
    <string name="invite_admin_en">Invite Admin</string>
    <string name="invite_member_en">Invite Member</string>
    <string name="i_agree_to_en">I agree on terms and conditions</string>
    <string name="i_didnot_get_code_en">I did not get the code!</string>
    <string name="igap_im_en">igap.im/</string>
    <string name="invite_admin_successful_en">Inviting Admin Successful</string>
    <string name="invite_successful_en">Invitation Successful</string>
    <string name="invite_friend_en">Invite a Friend</string>
    <string name="image_en">Image</string>
    <string name="left_group_en">Left Group</string>
    <string name="messages_en">Messages</string>
    <string name="messages_number_en">Messages Number</string>
    <string name="sender_en">Sender</string>
    <string name="video_en">Video</string>
    <string name="voice_en">Voice</string>
</resources>