<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="left"
    android:orientation="vertical"
    android:padding="5dp" >

    <Button
        android:id="@+id/btn_edit_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="left|center_vertical"
        android:minHeight="@dimen/dp40"
        android:paddingLeft="10dp"
        android:paddingRight="50dp"
        android:text="@string/edit_en"
        android:textSize="@dimen/normal_font" />

    <Button
        android:id="@+id/btn_channel_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="left|center_vertical"
        android:minHeight="@dimen/dp40"
        android:paddingLeft="10dp"
        android:paddingRight="50dp"
        android:text="@string/Channel_info_en"
        android:textSize="@dimen/normal_font" />

    <Button
        android:id="@+id/btn_channel_invite_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="left|center_vertical"
        android:minHeight="@dimen/dp40"
        android:paddingLeft="10dp"
        android:paddingRight="50dp"
        android:text="@string/invite_admin_en"
        android:textSize="@dimen/normal_font" />

    <Button
        android:id="@+id/btn_channel_invite_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="left|center_vertical"
        android:minHeight="@dimen/dp40"
        android:paddingLeft="10dp"
        android:paddingRight="50dp"
        android:text="@string/invite_member_en"
        android:textSize="@dimen/normal_font" />

    <Button
        android:id="@+id/btn_channel_clear_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="left|center_vertical"
        android:minHeight="@dimen/dp40"
        android:paddingLeft="10dp"
        android:paddingRight="50dp"
        android:text="@string/clear_history_en"
        android:textSize="@dimen/normal_font" />

</LinearLayout>