<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:gravity="center"
        android:layoutDirection="ltr"
        android:orientation="vertical"
        android:weightSum="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.95"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:orientation="horizontal"
            android:weightSum="1" >

            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.95"
                android:background="@drawable/frame_border"
                android:layoutDirection="ltr" >
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/green" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="right|center_vertical"
        android:layoutDirection="ltr"
        android:orientation="horizontal"
        android:weightSum="1" >

        <TextView
            android:id="@+id/textView_erase"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/fa_eraser"
            android:textAlignment="gravity"
            android:textColor="@color/orang_a"
            android:textSize="@dimen/xxlarg_font" />

        <TextView
            android:id="@+id/textView_paintsize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/paint"
            android:textAlignment="gravity"
            android:textColor="@color/green"
            android:textSize="@dimen/xxlarg_font" />

        <TextView
            android:id="@+id/textView_color"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/eyedropper"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="@dimen/xxlarg_font" />

        <TextView
            android:id="@+id/textView_new"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/fa_repeat"
            android:textAlignment="gravity"
            android:textColor="@color/red_normal"
            android:textSize="@dimen/xxlarg_font" />

        <TextView
            android:id="@+id/textView_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/save"
            android:textAlignment="gravity"
            android:textColor="@color/blue_b"
            android:textSize="@dimen/xxlarg_font" />
    </LinearLayout>

</LinearLayout>