<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:background="@color/orang_normal"
        android:gravity="left|center" >

        <Button
            android:id="@+id/mls_btn_stop"
            android:layout_width="@dimen/dp40"
            android:layout_height="@dimen/dp40"
            android:layout_marginLeft="@dimen/dp10"
            android:background="@null"
            android:gravity="center"
            android:text="@string/fa_stop"
            android:textColor="@color/light_green"
            android:textSize="@dimen/drawer_font_size" />

        <Button
            android:id="@+id/mls_btn_play_music"
            android:layout_width="@dimen/dp40"
            android:layout_height="@dimen/dp40"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:background="@null"
            android:gravity="center"
            android:text="@string/fa_play"
            android:textColor="@color/light_green"
            android:textSize="@dimen/drawer_font_size" />

        <TextView
            android:id="@+id/mls_txt_music_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="music name" />

        <TextView
            android:id="@+id/mls_txt_music_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="time" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:orientation="vertical" >

            <Button
                android:id="@+id/mls_btn_close"
                android:layout_width="@dimen/dp30"
                android:layout_height="@dimen/dp30"
                android:background="@null"
                android:gravity="center"
                android:text="@string/fa_remove"
                android:textColor="@color/light_green"
                android:textSize="@dimen/drawer_font_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>